--- a/package.json
+++ b/package.json
@@ -1,25 +1,89 @@
 {
-  "name": "feestructure",
+  "name": "fee",
   "version": "1.0.0",
-  "description": "To run this project firstly clone this repository and then run below command in terminal",
+  "description": "University Fee Calculator",
   "main": "index.js",
+  "dependencies": {
+    "accepts": "^1.3.8",
+    "bytes": "^3.1.2",
+    "array-flatten": "^1.1.1",
+    "content-disposition": "^0.5.4",
+    "bignumber.js": "^9.0.0",
+    "body-parser": "^1.20.1",
+    "call-bind": "^1.0.2",
+    "content-type": "^1.0.5",
+    "cookie-signature": "^1.0.6",
+    "core-util-is": "^1.0.3",
+    "cors": "^2.8.5",
+    "cookie": "^0.5.0",
+    "depd": "^2.0.0",
+    "debug": "^2.6.9",
+    "destroy": "^1.2.0",
+    "ee-first": "^1.1.1",
+    "encodeurl": "^1.0.2",
+    "etag": "^1.8.1",
+    "escape-html": "^1.0.3",
+    "finalhandler": "^1.2.0",
+    "forwarded": "^0.2.0",
+    "express": "^4.18.2",
+    "has": "^1.0.3",
+    "fresh": "^0.5.2",
+    "function-bind": "^1.1.1",
+    "get-intrinsic": "^1.2.0",
+    "http-errors": "^2.0.0",
+    "has-symbols": "^1.0.3",
+    "inherits": "^2.0.4",
+    "ipaddr.js": "^1.9.1",
+    "iconv-lite": "^0.4.24",
+    "isarray": "^1.0.0",
+    "media-typer": "^0.3.0",
+    "mime": "^1.6.0",
+    "methods": "^1.1.2",
+    "merge-descriptors": "^1.0.1",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "ms": "^2.0.0",
+    "object-assign": "^4.1.1",
+    "mysql": "^2.18.1",
+    "object-inspect": "^1.12.3",
+    "negotiator": "^0.6.3",
+    "path-to-regexp": "^0.1.7",
+    "on-finished": "^2.4.1",
+    "parseurl": "^1.3.3",
+    "proxy-addr": "^2.0.7",
+    "process-nextick-args": "^2.0.1",
+    "readable-stream": "^2.3.7",
+    "range-parser": "^1.2.1",
+    "qs": "^6.11.0",
+    "safe-buffer": "^5.2.1",
+    "raw-body": "^2.5.1",
+    "send": "^0.18.0",
+    "safer-buffer": "^2.1.2",
+    "serve-static": "^1.15.0",
+    "setprototypeof": "^1.2.0",
+    "statuses": "^2.0.1",
+    "toidentifier": "^1.0.1",
+    "side-channel": "^1.0.4",
+    "sqlstring": "^2.3.1",
+    "string_decoder": "^1.1.1",
+    "unpipe": "^1.0.0",
+    "util-deprecate": "^1.0.2",
+    "type-is": "^1.6.18",
+    "vary": "^1.1.2",
+    "utils-merge": "^1.0.1"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/adarshchourasia/fee_viewer.git"
+    "url": "git+https://github.com/pradnyesh45/university-fee.git"
   },
   "author": "Pradnyesh Aglawe",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/adarshchourasia/fee_viewer/issues"
+    "url": "https://github.com/pradnyesh45/university-fee/issues"
   },
-  "homepage": "https://github.com/adarshchourasia/fee_viewer#readme",
-  "dependencies": {
-    "body-parser": "^1.18.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mysql": "^2.15.0"
-  }
+  "homepage": "https://github.com/pradnyesh45/university-fee#readme"
 }
